[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/animations/pistol/equip.tres" type="Animation" id=1]
[ext_resource path="res://assets/animations/pistol/reload.tres" type="Animation" id=2]
[ext_resource path="res://assets/scripts/HitscanGun.gd" type="Script" id=3]
[ext_resource path="res://assets/animations/pistol/unequip.tres" type="Animation" id=4]
[ext_resource path="res://assets/animations/pistol/muzzle_flash.tres" type="Animation" id=5]
[ext_resource path="res://assets/scenes/AudioManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/crosshairs/crosshair121a.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/crosshairs/crosshair121.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/crosshairs/crosshair193.png" type="Texture" id=9]
[ext_resource path="res://assets/scenes/AmmoCount.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/scripts/AnimationController.gd" type="Script" id=11]
[ext_resource path="res://assets/scripts/HitscanBullet.gd" type="Script" id=12]
[ext_resource path="res://assets/scripts/Ejector.gd" type="Script" id=13]

[node name="Gun" type="Spatial"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
__meta__ = {
"_editor_description_": "ROOT NODE
 -Change name to the guns name.
- Assign a sound "
}

[node name="README" type="Node" parent="."]
__meta__ = {
"_editor_description_": "Go to each nodes editor description and follow the instructions.

This node can be deleted when the weapon is ready."
}

[node name="PrimaryFire" type="Spatial" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Set all variables in editor, make sure cycletime is =< the primary_fire animation.
Need at least 1 hitscan bullet below, add more if desired."
}

[node name="Raycast" type="RayCast" parent="PrimaryFire"]
enabled = true
cast_to = Vector3( 0, 0, 100 )
collision_mask = 193
collide_with_areas = true
script = ExtResource( 12 )

[node name="CycleTimer" type="Timer" parent="PrimaryFire"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/equip = ExtResource( 1 )
anims/muzzle_flash = ExtResource( 5 )
anims/reload = ExtResource( 2 )
anims/unequip = ExtResource( 4 )
script = ExtResource( 11 )

[node name="GunModel" type="Spatial" parent="."]
__meta__ = {
"_editor_description_": "MESH ROOT NODE
Used to position the model in the editor. DO NOT ANIMATE!
Rename if desired."
}

[node name="RootNode" type="Spatial" parent="GunModel"]
__meta__ = {
"_editor_description_": "ANIMATION ROOT NODE
Used to animate the model as a whole.
Put the MeshInstance Nodes below."
}

[node name="OmniLight" type="OmniLight" parent="GunModel/RootNode"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0622389 )
visible = false

[node name="Ejector" type="Spatial" parent="GunModel/RootNode"]
transform = Transform( -1, 1.86265e-09, 1.50996e-07, 1.86265e-09, 1, 1.49012e-08, -1.50996e-07, 1.49012e-08, -1, 0.113545, -0.0551565, 0.0390894 )
script = ExtResource( 13 )

[node name="AudioManager" parent="." instance=ExtResource( 6 )]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSide" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -8.0
margin_right = -28.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 16 )
rect_pivot_offset = Vector2( 4, 8 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rightside" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 26.0
margin_top = -8.0
margin_right = 34.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 16 )
rect_pivot_offset = Vector2( 16, 16 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopSide" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -34.0
margin_right = 8.0
margin_bottom = -26.0
rect_min_size = Vector2( 16, 8 )
rect_pivot_offset = Vector2( 16, 16 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomSide" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = 26.0
margin_right = 8.0
margin_bottom = 34.0
rect_min_size = Vector2( 16, 8 )
rect_pivot_offset = Vector2( 16, 16 )
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterPoint" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 24 )
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Crosshair"]
script = ExtResource( 11 )

[node name="AmmoCount" parent="HUD" instance=ExtResource( 10 )]

[connection signal="play_animation" from="PrimaryFire" to="PrimaryFire" method="_on_change_animation"]
[connection signal="play_animation" from="PrimaryFire" to="HUD/Crosshair/AnimationPlayer" method="_on_change_animation"]
[connection signal="update_ammo_display" from="PrimaryFire" to="HUD/AmmoCount" method="update_ui"]
